--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~material-design-icons/iconfont/material-icons.css";
-
 body {
   padding: 0;
   margin: 0;
-  background-color: rgb(13, 13, 13);
+  background-color: black;
 }
+/*# sourceMappingURL=styles.css.map */
