--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,20 @@
 .body {
-  height: 100vh;
-  width: 100vw;
-  background-color: black;
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+}
+
+.body app-navbar {
+  width: 17%;
+}
+
+.body .content {
+  width: 70%;
 }
 /*# sourceMappingURL=app.component.css.map */
