--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~material-design-icons/iconfont/material-icons.css";
+@import '~material-design-icons/iconfont/material-icons.css';
+
+html {
+  height: 100vh;
+}
 
 body {
+  height: 100vh;
   padding: 0;
   margin: 0;
   background-color: rgb(13, 13, 13);
+  overflow: hidden;
 }
