--- a/src/app/navbar/component/navbar.component.html
+++ b/src/app/navbar/component/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar-container">
   <div class="logo">
-    <app-logo></app-logo>
+    <app-navbar-logo></app-navbar-logo>
   </div>
   <div class="items">
     <app-navbar-item
