--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,6 +1,4 @@
 <div>
   <app-navbar></app-navbar>
-  <div class="content"></div>
+  <app-content></app-content>
 </div>
-
-<router-outlet></router-outlet>
