--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,4 +1,8 @@
 <div>
-  <app-navbar></app-navbar>
-  <app-content></app-content>
+  <div class="navbar">
+    <app-navbar></app-navbar>
+  </div>
+  <div class="content">
+    <router-outlet style="display: none;"></router-outlet>
+  </div>
 </div>
