completed framework and basic components for music module

--- a/src/app/music/components/music.component.html
+++ b/src/app/music/components/music.component.html
@@ -1,1 +1,8 @@
-<p>music works!</p>
+<div class="app-music">
+  <app-horizontal-list [header]="listHeader"></app-horizontal-list>
+  <app-horizontal-list [header]="listHeader"></app-horizontal-list>
+  <app-horizontal-list [header]="listHeader"></app-horizontal-list>
+  <app-horizontal-list [header]="listHeader"></app-horizontal-list>
+  <app-horizontal-list [header]="listHeader"></app-horizontal-list>
+  <app-horizontal-list [header]="listHeader"></app-horizontal-list>
+</div>
