--- a/src/app/components/app.component.scss
+++ b/src/app/components/app.component.scss
@@ -1,14 +1,22 @@
 div {
   display: grid;
   grid-template-areas: 'navbar content';
+  height: 100%;
   grid-template-columns: 230px 1fr;
   grid-template-rows: 1fr;
-  height: 100vh;
-  width: 100%;
   &.navbar {
     grid-area: navbar;
   }
   &.content {
     grid-area: content;
+    display: initial;
+    padding: 30px;
+    margin: 0 30px 0 30px;
+    height: calc(100% - calc(2 * 30px));
+    overflow-y: scroll;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    scrollbar-width: none;
   }
 }
