--- a/src/app/navbar/navbar-item/components/navbar-item.component.html
+++ b/src/app/navbar/navbar-item/components/navbar-item.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="link" [class.subitem]="isSubitem">
+<a [routerLink]="link" [class.subitem]="isSubitem" routerLinkActive="active">
   <i class="material-icons">{{ icon }}</i>
   {{ title }}
 </a>
