completed playlist detail page

--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -3,6 +3,11 @@
     <app-navbar></app-navbar>
   </div>
   <div class="content">
-    <router-outlet style="display: none;"></router-outlet>
+    <div class="app-view-controller">
+      <app-view-controller></app-view-controller>
+    </div>
+    <div class="router-outlet">
+      <router-outlet style="display: none;"></router-outlet>
+    </div>
   </div>
 </div>
