--- a/src/app/shared/modules/card/components/card.component.scss
+++ b/src/app/shared/modules/card/components/card.component.scss
@@ -1,16 +1,20 @@
-.music-card {
+.playlist-card {
+  text-decoration: none;
   display: flex;
   flex-flow: column;
   align-items: center;
   justify-content: center;
-  // height: 250px;
   padding: 10px;
   user-select: none;
   -webkit-user-select: none;
   border-radius: 10px;
   background-color: rgb(30, 30, 30);
-  box-shadow: 0 2px 10px rgba($color: rgb(0, 0, 0), $alpha: 0.3);
+  box-shadow: 0 2px 5px rgba($color: rgb(0, 0, 0), $alpha: 0.1);
+  transition: all 250ms ease-in-out;
   cursor: pointer;
+  &:hover {
+    box-shadow: 0 2px 15px rgba($color: rgb(0, 0, 0), $alpha: 0.35);
+  }
   .card-cover {
     width: 100%;
     padding-top: 100%;
@@ -25,7 +29,9 @@
     flex-flow: column;
     width: 100%;
     align-items: left;
-    font-family: 'roboto', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
     h1 {
       padding: 0;
       margin: 15px 0 5px 2px;
@@ -34,10 +40,16 @@
     }
     p {
       font-size: 13px;
+      line-height: 17px;
       padding: 0;
       margin: 2px 0 2px 2px;
-      font-weight: 500;
       color: rgb(143, 143, 143);
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      height: 33px;
     }
   }
 }
