--- a/src/app/shared/modules/horizontal-list/components/horizontal-list.component.html
+++ b/src/app/shared/modules/horizontal-list/components/horizontal-list.component.html
@@ -2,7 +2,7 @@
   <h1>{{ header }}</h1>
   <ul>
     <li *ngFor="let item of items">
-      <app-card [music]="item"></app-card>
+      <app-card [playlist]="item"></app-card>
     </li>
   </ul>
 </div>
