--- a/src/app/shared/modules/horizontal-list/components/horizontal-list.component.scss
+++ b/src/app/shared/modules/horizontal-list/components/horizontal-list.component.scss
@@ -6,12 +6,13 @@
   h1 {
     color: white;
     font-size: 25px;
+    margin-bottom: 20px;
   }
   ul {
     list-style: none;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
-    column-gap: 16px;
+    column-gap: 20px;
     row-gap: 16px;
     margin: 0;
     padding: 0;
