completed search bar

--- a/src/app/playlist-detail/track-list/track-list.component.scss
+++ b/src/app/playlist-detail/track-list/track-list.component.scss
@@ -25,7 +25,7 @@ div {
       flex-flow: row;
       align-items: flex-start;
       justify-content: stretch;
-      padding: 0 20px 0 20px;
+      padding: 0 20px 5px 20px;
       width: calc(100% - 40px);
       cursor: pointer;
       margin: 5px 0;
