--- a/src/app/components/app.component.scss
+++ b/src/app/components/app.component.scss
@@ -30,6 +30,7 @@ div {
       margin: 0 30px 0 30px;
     }
     .app-view-controller {
+      width: 100%;
       grid-area: view-controller;
       display: initial;
     }
