--- a/src/app/navbar/navbar-item/components/navbar-item.component.scss
+++ b/src/app/navbar/navbar-item/components/navbar-item.component.scss
@@ -26,7 +26,9 @@ a {
   }
   &.subitem {
     width: auto;
-    font-weight: 400;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
     color: grey;
     margin: 0 0 0 50px;
     &:hover {
