--- a/src/app/playlist-detail/banner/banner.component.scss
+++ b/src/app/playlist-detail/banner/banner.component.scss
@@ -21,12 +21,13 @@ div {
     align-items: center;
     justify-content: center;
     justify-items: center;
+    font-weight: 500;
     .playlist-detail-cover {
       width: 250px;
       height: min-content;
       .img {
         height: min-content;
-        box-shadow: 0 0 15px black;
+        box-shadow: 0 2px 12px black;
         width: 100%;
         padding-top: 100%;
         background-position: center;
@@ -48,13 +49,13 @@ div {
     .details {
       height: min-content;
       font-family: 'roboto', sans-serif;
-      color: rgb(216, 216, 216);
+      color: white;
       .creater {
         color: white;
         margin-top: 0;
         font-weight: 100;
-        font-style: italic;
         font-size: 18px;
+        font-weight: 500;
         span {
           color: grey;
         }
@@ -68,14 +69,13 @@ div {
       p {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
           Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-style: italic;
         font-size: 14px;
+        font-weight: 500;
         display: flex;
         flex-flow: row;
         align-items: center;
         justify-content: center;
         color: grey;
-        font-family: 'roboto', sans-serif;
         margin: 2px 0 2px 0;
         span {
           div {
