--- a/src/app/shared/modules/card/components/card.component.scss
+++ b/src/app/shared/modules/card/components/card.component.scss
@@ -4,34 +4,29 @@
   flex-flow: column;
   align-items: center;
   justify-content: center;
-  padding: 10px;
+  // padding: 10px;
   user-select: none;
   -webkit-user-select: none;
   border-radius: 10px;
-  background-color: rgb(30, 30, 30);
-  box-shadow: 0 2px 5px rgba($color: rgb(0, 0, 0), $alpha: 0.1);
   transition: all 250ms ease-in-out;
   cursor: pointer;
-  &:hover {
-    box-shadow: 0 2px 15px rgba($color: rgb(0, 0, 0), $alpha: 0.35);
-  }
   .card-cover {
     width: 100%;
     padding-top: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    border-radius: 5px;
-    // box-shadow: 0 5px 12px rgb(36, 36, 36);
+    box-shadow: 0 5px 12px rgb(10, 10, 10);
   }
   .card-detail {
     display: flex;
     flex-flow: column;
     width: 100%;
+    // margin-top: 5px;
     align-items: left;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
       Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     h1 {
       padding: 0;
       margin: 15px 0 5px 2px;
