completed search sheet ui TODO: search tile ui

--- a/src/app/playlist-detail/banner/banner.component.scss
+++ b/src/app/playlist-detail/banner/banner.component.scss
@@ -27,7 +27,7 @@ div {
       height: min-content;
       .img {
         height: min-content;
-        box-shadow: 0 2px 12px black;
+        box-shadow: 0 5px 20px 20px black;
         width: 100%;
         padding-top: 100%;
         background-position: center;
