--- a/src/app/explore/genere-card/genere-card.component.html
+++ b/src/app/explore/genere-card/genere-card.component.html
@@ -1,5 +1,5 @@
 <a class="genere-card">
-  <div [ngStyle]="{ color: getFontColor() }">
+  <div [ngStyle]="{ color: fontColor }">
     <i class="material-icons">album</i>
     <h1>{{ genere }}</h1>
   </div>
