--- a/src/app/playlist-detail/music-tile/music-tile.component.scss
+++ b/src/app/playlist-detail/music-tile/music-tile.component.scss
@@ -2,7 +2,7 @@ div {
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 500;
+  font-weight: 400;
   display: flex;
   flex-flow: column;
   align-items: flex-start;
@@ -17,8 +17,10 @@ div {
     justify-content: space-between;
     p {
       margin: 0;
+      font-weight: 500;
     }
     span {
+      font-size: 16px;
       margin: 0;
       color: grey;
     }
