--- a/src/app/playlist-detail/track-list/track-list.component.scss
+++ b/src/app/playlist-detail/track-list/track-list.component.scss
@@ -25,22 +25,22 @@ div {
       flex-flow: row;
       align-items: flex-start;
       justify-content: stretch;
-      padding: 0 20px 5px 20px;
-      width: calc(100% - 40px);
+      padding: 0 30px 5px 30px;
+      width: calc(100% - 60px);
       cursor: pointer;
       margin: 5px 0;
-      transition: all 300ms ease-in-out;
-      border-radius: 5px;
+      transition: all 200ms ease-in-out;
+      // border-radius: 5px;
       &:hover {
-        background-color: rgb(25, 25, 25);
-        box-shadow: 0 2px 10px rgba($color: rgb(0, 0, 0), $alpha: 0.3);
+        background-color: rgba($color: black, $alpha: 0.3);
+        // box-shadow: 0 2px 10px rgba($color: rgb(0, 0, 0), $alpha: 0.3);
       }
       &:before {
         content: counter(item) '. ';
         counter-increment: item;
         color: grey;
         align-self: center;
-        padding-right: 20px;
+        padding-right: 30px;
         margin-top: -15px;
       }
       app-music-tile {
