--- a/src/app/view-controller/components/view-controller.component.scss
+++ b/src/app/view-controller/components/view-controller.component.scss
@@ -1,14 +1,34 @@
+@keyframes opacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 div {
   height: 80px;
   width: 100%;
   position: fixed;
-  z-index: 2;
+  z-index: 10;
   display: flex;
   flex-flow: row;
   align-items: center;
   justify-content: flex-start;
   background-color: rgba($color: rgb(8, 8, 8), $alpha: 0.7);
-  app-view-controller-search-bar {
+  app-view-controller-search-sheet {
     width: 100%;
+  }
+}
+.overlay {
+  position: absolute;
+  height: calc(100% - 80px);
+  z-index: 1;
+  display: none;
+  margin-top: 80px;
+  animation: opacity 250ms;
+  &.visible {
+    display: block;
   }
 }
