--- a/src/app/view-controller/search/result-tile/result-tile.component.html
+++ b/src/app/view-controller/search/result-tile/result-tile.component.html
@@ -8,17 +8,18 @@
 
   <div class="details">
     <h1 class="title">{{ result.title }}</h1>
-    <p class="type">{{ result.type }}</p>
-    <span>
-      <div></div>
-    </span>
-    <div class="artists">
-      <p *ngFor="let artist of result.artists; last as isLast">
-        {{ artist.name }}
-        <span *ngIf="!isLast">
-          ,
+    <div>
+      <p class="type">
+        {{ result.type }}
+        <span>
+          <div></div>
         </span>
       </p>
+      <div class="artists">
+        <p *ngFor="let artist of result.artists; last as isLast">
+          {{ artist.name }}<span *ngIf="!isLast">,&nbsp;</span>
+        </p>
+      </div>
     </div>
   </div>
 </div>
