--- a/src/app/view-controller/search/result-panel/result-panel.component.scss
+++ b/src/app/view-controller/search/result-panel/result-panel.component.scss
@@ -12,25 +12,75 @@
 div {
   background-color: rgba($color: rgb(15, 15, 15), $alpha: 0.8);
   box-shadow: 0 5px 12px 6px rgba($color: black, $alpha: 0.9);
-  min-height: 100px;
+  max-height: 60vh;
   width: 100%;
   position: absolute;
   border-radius: 5px;
   margin-top: 20px;
   animation: fade-in 250ms;
-  animation-direction: reverse;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   &.visible {
     animation: fade-in 250ms;
-    animation-direction: normal;
   }
-  &::after {
+  .background {
     position: absolute;
     background-color: rgba($color: rgb(20, 20, 20), $alpha: 0.7);
     content: '';
     filter: blur(3px);
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    width: 100%;
+    height: calc(100%);
+    margin: 0;
+    padding: 0;
+    box-shadow: none;
+  }
+  .results {
+    position: relative;
+    margin: 0 10px;
+    border-radius: 0;
+    background-color: transparent;
+    max-height: calc(60vh - 20px);
+    overflow-y: scroll;
+    box-shadow: none;
+    width: 100%;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    &.icon {
+      display: flex;
+      flex-flow: column;
+      align-items: center;
+      justify-content: center;
+      color: grey;
+      margin: 30px 0 30px 0;
+      font-weight: 500;
+      i {
+        height: 20vh;
+        font-size: 150px;
+        margin-bottom: 20px;
+      }
+      h2 {
+        font-family: 'roboto', sans-serif;
+        margin: 8px 0;
+        padding: 0;
+        font-size: 15px;
+        text-align: center;
+      }
+      p {
+        margin: 0;
+        padding: 0;
+        font-size: 13.5px;
+        text-align: center;
+        max-width: 50%;
+      }
+    }
+    &.recents {
+      p {
+        font-weight: 500;
+        font-size: 14px;
+        color: grey;
+      }
+    }
   }
 }
