--- a/src/app/view-controller/search/result-tile/result-tile.component.scss
+++ b/src/app/view-controller/search/result-tile/result-tile.component.scss
@@ -1,9 +1,10 @@
 div {
   display: flex;
   flex-flow: row;
-  justify-content: center;
+  cursor: pointer;
+  justify-content: flex-start;
   align-items: center;
-  //   margin: 40px 0 40px 0;
+  margin: 5px 0 5px 0;
   //   height: calc(100vh - 80px - 80px);
   user-select: none;
   &::-webkit-scrollbar {
@@ -12,11 +13,11 @@ div {
   scrollbar-width: none;
 
   .cover-container {
-    height: 100px;
-    width: 100px;
+    min-height: 60px;
+    min-width: 60px;
     .img {
       height: min-content;
-      box-shadow: 0 5px 20px 20px black;
+      box-shadow: 0 5px 10px rgba($color: black, $alpha: 0.7);
       width: 100%;
       padding-top: 100%;
       background-position: center;
@@ -25,47 +26,64 @@ div {
     }
   }
 
-  h1 {
-    font-size: 15px;
-
-    height: min-content;
-    text-align: center;
-  }
-  p {
-    height: min-content;
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: grey;
-  }
   .details {
     height: min-content;
-    font-family: 'roboto', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
-  }
-  .artists {
-    height: min-content;
     display: flex;
-    flex-flow: row wrap;
-    width: 70%;
-    p {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      font-size: 14px;
+    flex-flow: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-left: 13px;
+    margin-right: 25px;
+    overflow: hidden;
+    h1 {
+      // font-family: 'roboto', sans-serif;
+      font-size: 15px;
+      margin: 0;
       font-weight: 500;
+    }
+    div {
+      margin: 5px 0 0 0;
       display: flex;
       flex-flow: row;
-      align-items: center;
+      overflow: hidden;
+      align-items: flex-start;
       justify-content: center;
-      color: grey;
-      margin: 2px 0 2px 0;
-      span {
-        div {
-          margin: 0 5px 0 5px;
-          height: 5px;
-          width: 5px;
-          border-radius: 50%;
-          background-color: rgb(216, 216, 216);
+      p {
+        font-weight: 500;
+        margin: 0;
+        color: grey;
+        font-size: 13px;
+        display: flex;
+        flex-flow: row;
+        align-items: center;
+        justify-content: center;
+        &.type {
+          span {
+            div {
+              margin: 2px 5px 0 5px;
+              height: 5px;
+              width: 5px;
+              border-radius: 50%;
+              background-color: grey;
+            }
+          }
+        }
+      }
+      .artists {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        overflow: hidden;
+        // width: 100%;
+        p {
+          display: flex;
+          flex-flow: row nowrap;
+          white-space: nowrap;
         }
       }
     }
