--- a/src/app/view-controller/components/view-controller.component.html
+++ b/src/app/view-controller/components/view-controller.component.html
@@ -1,4 +1,5 @@
 <div>
+  <div class="view background" [class.blur]="overlay"></div>
   <app-view-controller-navigation-buttons></app-view-controller-navigation-buttons>
   <app-view-controller-search-sheet
     *ngIf="routeIncludes('/explore')"
@@ -6,6 +7,8 @@
 </div>
 <div
   class="overlay"
-  [class.visible]="overlay && routeIncludes('/explore')"
+  [class.visible]="overlay"
   (mousedown)="updateSearchingStatus(false)"
-></div>
+>
+  <div class="overlay background"></div>
+</div>
