--- a/src/app/view-controller/components/view-controller.component.scss
+++ b/src/app/view-controller/components/view-controller.component.scss
@@ -17,8 +17,25 @@ div {
   align-items: center;
   justify-content: flex-start;
   background-color: rgba($color: rgb(8, 8, 8), $alpha: 0.7);
+  app-view-controller-navigation-buttons {
+    position: relative;
+  }
   app-view-controller-search-sheet {
+    position: relative;
     width: 100%;
+  }
+  .view.background {
+    display: none;
+    position: absolute;
+    height: 110%;
+    width: 100%;
+    z-index: 0;
+    background-color: rgba($color: rgb(10, 10, 10), $alpha: 0.7);
+    filter: blur(5px);
+    &.blur {
+      display: block;
+      animation: opacity 200ms;
+    }
   }
 }
 .overlay {
@@ -27,8 +44,18 @@ div {
   z-index: 1;
   display: none;
   margin-top: 80px;
-  animation: opacity 250ms;
+  animation: opacity 200ms;
+  background-color: rgba($color: rgb(8, 8, 8), $alpha: 0.7);
   &.visible {
     display: block;
+  }
+  .overlay.background {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    display: block;
+    margin: 0;
+    background-color: rgba($color: rgb(12, 12, 12), $alpha: 0.7);
+    filter: blur(5px);
   }
 }
