--- a/src/app/view-controller/search/result-panel/result-panel.component.scss
+++ b/src/app/view-controller/search/result-panel/result-panel.component.scss
@@ -10,7 +10,7 @@
 }
 
 div {
-  background-color: rgba($color: rgb(15, 15, 15), $alpha: 0.8);
+  background-color: rgba($color: rgb(15, 15, 15), $alpha: 0.5);
   box-shadow: 0 5px 12px 6px rgba($color: black, $alpha: 0.9);
   max-height: 60vh;
   width: 100%;
@@ -18,6 +18,7 @@ div {
   border-radius: 5px;
   margin-top: 20px;
   animation: fade-in 250ms;
+  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   &.visible {
@@ -25,8 +26,7 @@ div {
   }
   .background {
     position: absolute;
-    background-color: rgba($color: rgb(20, 20, 20), $alpha: 0.7);
-    content: '';
+    background-color: rgba($color: rgb(20, 20, 20), $alpha: 0.5);
     filter: blur(3px);
     width: 100%;
     height: calc(100%);
