--- a/src/app/view-controller/components/view-controller.component.html
+++ b/src/app/view-controller/components/view-controller.component.html
@@ -8,7 +8,7 @@
 <div
   class="overlay"
   [class.visible]="overlay"
-  (mousedown)="updateSearchingStatus(false)"
+  (mousedown)="updateOverlayStatus(false)"
 >
   <div class="overlay background"></div>
 </div>
