--- a/src/app/playlist-detail/banner/banner.component.scss
+++ b/src/app/playlist-detail/banner/banner.component.scss
@@ -1,90 +1,79 @@
 div {
   display: flex;
+  flex-flow: column;
   justify-content: center;
   align-items: center;
-  margin: 40px 0 40px 0;
-  height: calc(100vh - 80px - 80px);
   overflow: scroll;
   user-select: none;
   color: grey;
+  width: 100%;
+  position: sticky;
+  top: 12%;
   &::-webkit-scrollbar {
     display: none;
   }
   scrollbar-width: none;
-  div {
-    overflow: hidden;
-    margin: 0;
+  .playlist-detail-cover {
+    width: 250px;
+    box-shadow: 0 5px 15px rgba($color: #000000, $alpha: 0.8);
+    .img {
+      height: min-content;
+      width: 100%;
+      padding-top: 100%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  }
+  h1 {
     height: min-content;
-    width: 100%;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
+    text-align: center;
+  }
+  p {
+    height: min-content;
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: grey;
     font-weight: 500;
-    .playlist-detail-cover {
-      width: 250px;
-      height: min-content;
-      .img {
-        height: min-content;
-        box-shadow: 0 5px 20px 20px black;
-        width: 100%;
-        padding-top: 100%;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-      }
-    }
-    h1 {
-      height: min-content;
-      text-align: center;
-    }
-    p {
-      height: min-content;
-      text-align: center;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-      color: grey;
-    }
-    .details {
-      height: min-content;
-      font-family: 'roboto', sans-serif;
+  }
+  .details {
+    margin-top: 20%;
+    margin-bottom: 30px;
+    height: min-content;
+    font-family: 'roboto', sans-serif;
+    color: white;
+    .creater {
       color: white;
-      .creater {
-        color: white;
-        margin-top: 0;
-        font-weight: 100;
-        font-size: 18px;
-        font-weight: 500;
-        span {
-          color: grey;
-        }
+      margin-top: 0;
+      font-weight: 100;
+      font-size: 18px;
+      font-weight: 500;
+      span {
+        color: grey;
       }
     }
-    .artists {
-      height: min-content;
+  }
+  .artists {
+    height: min-content;
+    display: flex;
+    flex-flow: row wrap;
+    width: 70%;
+    p {
+      font-size: 14px;
       display: flex;
-      flex-flow: row wrap;
-      width: 70%;
-      p {
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-          Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        font-size: 14px;
-        font-weight: 500;
-        display: flex;
-        flex-flow: row;
-        align-items: center;
-        justify-content: center;
-        color: grey;
-        margin: 2px 0 2px 0;
-        span {
-          div {
-            margin: 0 5px 0 5px;
-            height: 5px;
-            width: 5px;
-            border-radius: 50%;
-            background-color: rgb(216, 216, 216);
-          }
+      flex-flow: row;
+      align-items: center;
+      justify-content: center;
+      color: grey;
+      margin: 2px 0 2px 0;
+      span {
+        div {
+          margin: 0 5px 0 5px;
+          height: 5px;
+          width: 5px;
+          border-radius: 50%;
+          background-color: rgb(216, 216, 216);
         }
       }
     }
