--- a/src/app/playlist-detail/components/playlist-detail.component.html
+++ b/src/app/playlist-detail/components/playlist-detail.component.html
@@ -1,12 +1,11 @@
 <div>
-  <div class="banner">
-    <app-playlist-detail-banner
-      [details]="playlist"
-    ></app-playlist-detail-banner>
-  </div>
-  <div class="track-list">
-    <app-playlist-detail-track-list
-      [track-list]="playlist.tracks"
-    ></app-playlist-detail-track-list>
-  </div>
+  <app-playlist-detail-banner
+    [details]="playlist"
+    class="banner"
+  ></app-playlist-detail-banner>
+
+  <app-playlist-detail-track-list
+    [track-list]="playlist.tracks"
+    class="track-list"
+  ></app-playlist-detail-track-list>
 </div>
