--- a/src/app/playlist-detail/music-tile/music-tile.component.scss
+++ b/src/app/playlist-detail/music-tile/music-tile.component.scss
@@ -1,3 +1,14 @@
+@keyframes fadeIN {
+  from {
+    transform: translateY(25px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
 div {
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -15,14 +26,21 @@ div {
     width: 100%;
     align-items: stretch;
     justify-content: space-between;
+    margin-bottom: 0;
     p {
       margin: 0;
       font-weight: 500;
     }
-    span {
-      font-size: 16px;
+    i {
+      font-size: 25px;
       margin: 0;
+      padding: 5px;
       color: grey;
+      border-radius: 50%;
+      transition: all 200ms ease-in-out;
+      &:hover {
+        background-color: rgb(40, 40, 40);
+      }
     }
   }
   .artists {
@@ -47,5 +65,27 @@ div {
         background-color: grey;
       }
     }
+  }
+}
+.actions {
+  // display: none;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  background-color: transparent;
+  top: 0;
+  bottom: 0;
+  z-index: 10;
+  cursor: initial;
+  animation: fadeIN 250ms;
+  overflow: scroll;
+  height: 100%;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  app-actions {
+    margin-top: 20%;
+    // width: 100%;
   }
 }
