--- a/src/app/shared/modules/actions/action-tile/action-tile.component.html
+++ b/src/app/shared/modules/actions/action-tile/action-tile.component.html
@@ -1,4 +1,4 @@
-<div (click)="onClick($event)">
+<div (mousedown)="performAction($event)">
   <i class="material-icons">{{ action.icon }}</i>
   <p>{{ action.title }}</p>
 </div>
