--- a/src/app/view-controller/search/search-bar/search-bar.component.html
+++ b/src/app/view-controller/search/search-bar/search-bar.component.html
@@ -11,7 +11,7 @@
   <i
     *ngIf="isSearching"
     class="cancel-search material-icons"
-    (click)="clearSearch()"
+    (mousedown)="clearSearch()"
     >cancel</i
   >
 </div>
