--- a/src/app/view-controller/search/search-sheet/search-sheet.component.html
+++ b/src/app/view-controller/search/search-sheet/search-sheet.component.html
@@ -1,7 +1,6 @@
-<div class="search-sheet">
+<div (mousedown)="$event.stopPropagation()" class="search-sheet">
   <app-view-controller-search-bar></app-view-controller-search-bar>
   <app-view-controller-result-panel
-    *ngIf="isSearching"
     [visible]="isSearching"
   ></app-view-controller-result-panel>
 </div>
