--- a/src/app/playlist-detail/music-tile/music-tile.component.scss
+++ b/src/app/playlist-detail/music-tile/music-tile.component.scss
@@ -57,7 +57,6 @@ div {
   }
 }
 .actions {
-  // display: none;
   position: absolute;
   height: 100vh;
   width: 100%;
@@ -66,8 +65,7 @@ div {
   bottom: 0;
   z-index: 10;
   cursor: initial;
-  // animation: fadeIN 250ms;
-  overflow: scroll;
+  overflow: visible scroll;
   height: 100%;
   scrollbar-width: none;
   &::-webkit-scrollbar {
