--- a/src/app/shared/modules/actions/action-tile/action-tile.component.scss
+++ b/src/app/shared/modules/actions/action-tile/action-tile.component.scss
@@ -1,25 +1,3 @@
-@keyframes spread-out {
-  from {
-    padding: 0px;
-    margin: 5px;
-  }
-  to {
-    padding: 5px;
-    margin: 0;
-  }
-}
-
-@keyframes spread-in {
-  from {
-    padding: 5px;
-    margin: 0;
-  }
-  to {
-    padding: 0px;
-    margin: 5px;
-  }
-}
-
 div {
   display: flex;
   flex-flow: row nowrap;
@@ -29,9 +7,7 @@ div {
     padding: 0px;
     margin: 5px;
     border-radius: 50%;
-    transition: all 200ms ease-in-out;
-    animation: spread-in 150ms ease-in-out;
-    // animation-direction: reverse;
+    transition: all 200ms ease;
   }
   p {
     margin: 20px;
@@ -41,8 +17,6 @@ div {
       padding: 5px;
       margin: 0px;
       background-color: rgb(40, 40, 40);
-      animation: spread-out 200ms ease-in-out;
-      animation-direction: normal;
     }
   }
 }
