implemented lazy loading and child routing in modules and navigation buttons work

--- a/src/app/explore/components/explore.component.html
+++ b/src/app/explore/components/explore.component.html
@@ -1,3 +1,4 @@
 <div class="app-explore">
-  <app-explore-generes></app-explore-generes>
+  <router-outlet style="display: none;"></router-outlet>
+  <!-- <app-explore-generes></app-explore-generes> -->
 </div>
