--- a/src/app/explore/genere-card/genere-card.component.html
+++ b/src/app/explore/genere-card/genere-card.component.html
@@ -1,6 +1,6 @@
-<a class="genere-card">
+<a [routerLink]="[genere.url]" class="genere-card">
   <div [ngStyle]="{ color: fontColor }">
     <i class="material-icons">album</i>
-    <h1>{{ genere }}</h1>
+    <h1>{{ genere.title }}</h1>
   </div>
 </a>
