--- a/src/app/view-controller/navigation-buttons/navigation-buttons.component.html
+++ b/src/app/view-controller/navigation-buttons/navigation-buttons.component.html
@@ -1,4 +1,12 @@
 <div>
-  <i class="material-icons navigation-button-back">keyboard_arrow_left</i>
-  <i class="material-icons navigation-button-back">keyboard_arrow_right</i>
+  <i
+    (click)="navigate(History.Back)"
+    class="material-icons navigation-button-back"
+    >keyboard_arrow_left</i
+  >
+  <i
+    (click)="navigate(History.Forward)"
+    class="material-icons navigation-button-back"
+    >keyboard_arrow_right</i
+  >
 </div>
