explore generes page shows music

--- a/src/app/explore/genere-music/genere-music.component.html
+++ b/src/app/explore/genere-music/genere-music.component.html
@@ -1,1 +1,6 @@
-<p>genere-music works!</p>
+<app-horizontal-list [header]="'New releases'"></app-horizontal-list>
+<div style="height: 20px;"></div>
+<app-horizontal-list
+  [numberOfItems]="3"
+  [header]="'Popular playlist'"
+></app-horizontal-list>
