--- a/src/app/explore/genere-music/genere-music.component.scss
+++ b/src/app/explore/genere-music/genere-music.component.scss
@@ -1,3 +1,16 @@
-app-horizontal-list {
-  margin-top: 0;
+div {
+  padding: 0 60px;
+  // background-blend-mode: color-dodge;
+  h1 {
+    width: 100%;
+    font-family: 'roboto', sans-serif;
+    font-size: 45px;
+    text-align: center;
+    padding: 80px 0 80px 0;
+    margin: 0;
+  }
+
+  app-horizontal-list {
+    margin-top: 0;
+  }
 }
