--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -2,7 +2,7 @@
   <div class="navbar">
     <app-navbar></app-navbar>
   </div>
-  <div class="content">
+  <div #content (scroll)="updateScroll(content)" class="content">
     <div class="app-view-controller">
       <app-view-controller></app-view-controller>
     </div>
