--- a/src/app/explore/genere-music/genere-music.component.html
+++ b/src/app/explore/genere-music/genere-music.component.html
@@ -1,16 +1,18 @@
 <div
   [ngStyle]="{
     background:
-      'radial-gradient(
-        800% 150% at 0% 0%,
-        rgba(' +
+      'linear-gradient(180deg, rgba(' +
       color +
-      ', 0.3) 20px,
-        rgba(17,17,17) 800px
-        )'
+      ', ' +
+      gradientOpacity +
+      ') 30px, #111111 ' +
+      gradientExtent +
+      'px)'
   }"
 >
-  <h1 #heading [ngStyle]="{ color: 'rgb(' + color + ')' }">{{ title }}</h1>
+  <h1 #heading [ngStyle]="{ color: 'rgb(' + color + ')', opacity: 1 }">
+    {{ title }}
+  </h1>
   <app-horizontal-list [header]="'New releases'"></app-horizontal-list>
   <div style="background: none; height: 20px;"></div>
   <app-horizontal-list
