--- a/src/app/explore/genere-music/genere-music.component.scss
+++ b/src/app/explore/genere-music/genere-music.component.scss
@@ -2,12 +2,13 @@ div {
   padding: 0 60px;
   // background-blend-mode: color-dodge;
   h1 {
-    width: 100%;
+    // width: 100%;
     font-family: 'roboto', sans-serif;
     font-size: 45px;
     text-align: center;
-    padding: 80px 0 80px 0;
-    margin: 0;
+    padding: 80px 0 0 0;
+    margin: 0 0 80px 0;
+    // margin: 0;
   }
 
   app-horizontal-list {
