--- a/src/app/explore/genere-music/genere-music.component.html
+++ b/src/app/explore/genere-music/genere-music.component.html
@@ -14,7 +14,7 @@
     {{ title }}
   </h1>
   <app-horizontal-list [header]="'New releases'"></app-horizontal-list>
-  <div style="background: none; height: 20px;"></div>
+  <div style="background: none; height: 20px; padding: 0;"></div>
   <app-horizontal-list
     [numberOfItems]="3"
     [header]="'Popular playlist'"
