--- a/src/app/explore/genere-music/genere-music.component.scss
+++ b/src/app/explore/genere-music/genere-music.component.scss
@@ -1,6 +1,5 @@
 div {
   padding: 80px 60px 0 60px;
-  // background-blend-mode: color-dodge;
   h1 {
     // width: 100%;
     font-family: 'roboto', sans-serif;
@@ -8,10 +7,14 @@ div {
     text-align: center;
     padding: 80px 0 0 0;
     margin: 0 0 80px 0;
+    position: relative;
+    z-index: 0;
     // margin: 0;
   }
 
   app-horizontal-list {
     margin-top: 0;
+    position: relative;
+    z-index: 1;
   }
 }
