playlist detail now has gradient of dominant color of title cover

--- a/src/app/navbar/navbar-item/components/navbar-item.component.scss
+++ b/src/app/navbar/navbar-item/components/navbar-item.component.scss
@@ -18,6 +18,9 @@ a {
     font-size: 27px;
     padding: 0 18px 0 0;
   }
+  &:focus {
+    background-color: rgba(40, 40, 40, 0.4);
+  }
   &:hover {
     background-color: rgb(40, 40, 40);
   }
