--- a/src/app/playlist-detail/components/playlist-detail.component.scss
+++ b/src/app/playlist-detail/components/playlist-detail.component.scss
@@ -1,10 +1,9 @@
 div {
-  height: calc(100vh - 80px);
-  // width: 100%;
+  height: calc(100vh);
   display: grid;
   grid-template-areas: 'banner track-list';
   grid-template-columns: 35% 1fr;
-  padding: 0 60px 0 60px;
+  padding: 80px 60px 0 60px;
   .banner {
     grid-area: banner;
     display: initial;
