--- a/src/app/view-controller/search/search-bar/search-bar.component.scss
+++ b/src/app/view-controller/search/search-bar/search-bar.component.scss
@@ -32,6 +32,7 @@ div {
       font-weight: 700;
       text-align: center;
       color: rgb(70, 70, 70);
+      opacity: 1;
     }
     &.activated {
       box-shadow: 0 5px 12px 6px black;
