--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,4 +11,11 @@ body {
   margin: 0;
   background-color: rgb(17, 17, 17);
   overflow: hidden;
+
+  ::-moz-focus-inner {
+    border: none;
+  }
+  a:focus {
+    outline: none;
+  }
 }
