--- a/src/app/playlist-detail/banner/banner.component.html
+++ b/src/app/playlist-detail/banner/banner.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
   <app-image [url]="details.cover"></app-image>
   <div class="details">
     <h1 class="title">{{ details.title }}</h1>
