--- a/src/app/playlist-detail/banner/banner.component.scss
+++ b/src/app/playlist-detail/banner/banner.component.scss
@@ -7,7 +7,9 @@ div {
   user-select: none;
   color: grey;
   width: 100%;
-
+  &.container {
+    margin-top: 80px;
+  }
   &::-webkit-scrollbar {
     display: none;
   }
