--- a/src/app/explore/genere-music/genere-music.component.scss
+++ b/src/app/explore/genere-music/genere-music.component.scss
@@ -5,8 +5,8 @@ div {
     font-family: 'roboto', sans-serif;
     font-size: 45px;
     text-align: center;
-    padding: 80px 0 0 0;
-    margin: 0 0 80px 0;
+    padding: 10% 0 0 0;
+    margin: 0 0 6% 0;
     position: relative;
     z-index: 0;
     // margin: 0;
