--- a/src/app/navbar/navbar-item/components/navbar-item.component.scss
+++ b/src/app/navbar/navbar-item/components/navbar-item.component.scss
@@ -11,6 +11,7 @@ a {
   align-items: center;
   padding: 10px 8px 10px 8px;
   margin: 5px 0 5px 0;
+  user-select: none;
   cursor: pointer;
   transition: all 200ms ease-in-out;
   border-radius: 5px;
