--- a/src/app/playlist-detail/track-list/track-list.component.scss
+++ b/src/app/playlist-detail/track-list/track-list.component.scss
@@ -10,6 +10,7 @@ ol {
   justify-content: center;
   font-size: 18px;
   padding: 0;
+  margin-top: 80px;
   li {
     display: flex;
     flex-flow: row;
