playlist banner in playlist detail is now centered

--- a/src/app/playlist-detail/banner/banner.component.html
+++ b/src/app/playlist-detail/banner/banner.component.html
@@ -1,24 +1,25 @@
-<div class="container">
-  <app-image [url]="details.cover"></app-image>
-  <div class="details">
-    <h1 class="title">{{ details.title }}</h1>
-    <p class="creater"><span>By</span> {{ details.created_by }}</p>
-    <div class="artists">
-      <p *ngFor="let artist of details.artists; last as isLast">
-        {{ artist.name }}
-        <span *ngIf="!isLast">
-          <div></div>
-        </span>
-      </p>
-    </div>
-    <input
-      (mousedown)="mouseEvent($event)"
-      (mouseup)="mouseEvent($event)"
-      [@mousedownTrigger]="isMousedown ? 'mousedown' : '*'"
-      class="play-pause"
-      type="submit"
-      value="Play"
-    />
-    <p class="songs-count">{{ details.songs }} SONGS</p>
+<div style="height: 170px;"></div>
+<!-- <div class="app-image"> -->
+<app-image [url]="details.cover"></app-image>
+<!-- </div> -->
+<div class="details">
+  <h1 class="title">{{ details.title }}</h1>
+  <p class="creater"><span>By</span> {{ details.created_by }}</p>
+  <div class="artists">
+    <p *ngFor="let artist of details.artists; last as isLast">
+      {{ artist.name }}
+      <span *ngIf="!isLast">
+        <div></div>
+      </span>
+    </p>
   </div>
+  <input
+    (mousedown)="mouseEvent($event)"
+    (mouseup)="mouseEvent($event)"
+    [@mousedownTrigger]="isMousedown ? 'mousedown' : '*'"
+    type="submit"
+    value="Play"
+  />
+  <p class="songs-count">{{ details.songs }} SONGS</p>
 </div>
+<div style="height: 150px;"></div>
