--- a/src/app/playlist-detail/banner/banner.component.scss
+++ b/src/app/playlist-detail/banner/banner.component.scss
@@ -1,57 +1,45 @@
-div {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  overflow: scroll;
-  user-select: none;
-  color: grey;
-  width: 100%;
-  &.container {
-    margin-top: 80px;
-  }
-  &::-webkit-scrollbar {
-    display: none;
-  }
-  scrollbar-width: none;
-  app-image {
-    margin-top: 25%;
-    width: 250px;
-  }
+// .app-image {
+//   // display: flex;
+//   // flex-flow: column;
+//   width: 100px;
+// }
+.details {
+  text-align: center;
   h1 {
-    height: min-content;
-    text-align: center;
+    margin: 5px 0 15px 0;
   }
   p {
-    height: min-content;
-    text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
       Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: grey;
     font-weight: 500;
   }
-  .details {
-    margin-top: 20px;
-    margin-bottom: 30px;
-    height: min-content;
-    font-family: 'roboto', sans-serif;
+  margin-top: 20px;
+  display: flex;
+  flex-flow: column;
+  justify-items: center;
+  align-items: center;
+  font-family: 'roboto', sans-serif;
+  color: white;
+  width: 100%;
+  .creater {
     color: white;
-    .creater {
-      color: white;
-      margin-top: 0;
-      font-weight: 100;
-      font-size: 18px;
-      font-weight: 500;
-      span {
-        color: grey;
-      }
+    margin-top: 0;
+    margin-bottom: 15px;
+    font-weight: 100;
+    font-size: 16px;
+    font-weight: 400;
+    span {
+      color: grey;
     }
   }
   .artists {
     height: min-content;
     display: flex;
     flex-flow: row wrap;
-    width: 70%;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     p {
       font-size: 14px;
       display: flex;
@@ -71,9 +59,9 @@ div {
       }
     }
   }
-  .play-pause {
+  input[type='submit'] {
     margin: 30px 0 10px 0;
-    width: 70%;
+    width: 90%;
     height: 50px;
     border: none;
     border-radius: 25px;
@@ -85,9 +73,5 @@ div {
     cursor: pointer;
     background-color: #95e1d3;
     color: black;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
   }
 }
