--- a/src/app/playlist-detail/components/playlist-detail.component.html
+++ b/src/app/playlist-detail/components/playlist-detail.component.html
@@ -8,13 +8,37 @@
       ') 30px, #111111 60%)'
   }"
 >
-  <app-playlist-detail-banner
-    [details]="playlist"
+  <div
+    #banner
+    (scroll)="
+      linkedScrolling({
+        element: banner,
+        elementClass: 'banner',
+        linked: track,
+        linkedClass: 'track-list'
+      })
+    "
     class="banner"
-  ></app-playlist-detail-banner>
+  >
+    <app-playlist-detail-banner
+      [details]="playlist"
+    ></app-playlist-detail-banner>
+  </div>
 
-  <app-playlist-detail-track-list
-    [track-list]="playlist.tracks"
+  <div
     class="track-list"
-  ></app-playlist-detail-track-list>
+    #track
+    (scroll)="
+      linkedScrolling({
+        element: track,
+        elementClass: 'track-list',
+        linked: banner,
+        linkedClass: 'banner'
+      })
+    "
+  >
+    <app-playlist-detail-track-list
+      [track-list]="playlist.tracks"
+    ></app-playlist-detail-track-list>
+  </div>
 </div>
