changed how horizontal list calls service making it more versitile and moved library navigation to view controller

--- a/src/app/explore/genere-music/genere-music.component.html
+++ b/src/app/explore/genere-music/genere-music.component.html
@@ -16,7 +16,7 @@
   <app-horizontal-list [header]="'New releases'"></app-horizontal-list>
   <div style="background: none; height: 20px; padding: 0;"></div>
   <app-horizontal-list
-    [numberOfItems]="3"
+    [count]="30"
     [header]="'Popular playlist'"
   ></app-horizontal-list>
 </div>
