--- a/src/app/view-controller/search/search-sheet/search-sheet.component.scss
+++ b/src/app/view-controller/search/search-sheet/search-sheet.component.scss
@@ -1,7 +1,7 @@
 div {
-  width: 50%;
+  width: 60%;
   position: relative;
-  margin-left: calc(25% - 163px);
+  margin-left: 15%;
   app-view-controller-result-panel {
     display: flex;
     flex-flow: column;
