--- a/src/app/shared/modules/image/image.component/image.component.html
+++ b/src/app/shared/modules/image/image.component/image.component.html
@@ -1,6 +1,7 @@
-<div class="image-container">
+<div class="image-container" [class.circle]="circle">
   <div
     class="image"
+    [class.circle]="circle"
     [ngStyle]="{ 'background-image': 'url(' + url + ')' }"
   ></div>
 </div>
