--- a/src/app/shared/modules/card/card.component/card.component.scss
+++ b/src/app/shared/modules/card/card.component/card.component.scss
@@ -1,4 +1,4 @@
-.playlist-card {
+.card {
   text-decoration: none;
   display: flex;
   flex-flow: column;
@@ -17,6 +17,7 @@
   app-image {
     width: 100%;
   }
+
   .card-detail {
     display: flex;
     flex-flow: column;
@@ -44,6 +45,9 @@
       overflow: hidden;
       text-overflow: ellipsis;
       height: 33px;
+    }
+    &.artist {
+      align-items: center;
     }
   }
 }
