--- a/src/app/shared/modules/image/image.component/image.component.scss
+++ b/src/app/shared/modules/image/image.component/image.component.scss
@@ -1,6 +1,12 @@
 .image-container {
   box-shadow: 0 5px 15px rgba($color: #000000, $alpha: 0.8);
+  &.circle {
+    border-radius: 50%;
+  }
   .image {
+    &.circle {
+      border-radius: 50%;
+    }
     height: min-content;
     width: 100%;
     padding-top: 100%;
